# emaktab-logger

./: .gitignore  README.md  mobile.py
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/myapplication/: AppUpdater.kt  CredentialsManager.kt  GeminiLogic.kt  Logger.kt  MainActivity.kt  MyViewModelKt.kt
android/app/src/main/java/com/example/myapplication/ui/theme/: Color.kt  Theme.kt
android/app/src/main/res/layout/: mainlayout.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/values-uz/: strings.xml
android/app/src/main/res/xml/: provider_paths.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/java/com/example/myapplication/: MainViewModel.kt
app/src/main/res/values/: strings.xml
cpp/: CMakeLists.txt  main.cpp
